# pytest_PageObjectPlaywright_example

./: .dockerignore  .gitignore  Dockerfile  Makefile  Readme.md  docker-compose.yaml
pw/: pyproject.toml
pw/tests/: conftest.py  test_home.py
pw/utils/: application.py
pw/utils/base/: base_page_interface.py
pw/utils/helpers/: navigation.py
pw/utils/pages/: home_page.py
scripts/: check_poetry.sh  install.sh  start_tests_allure.sh
