[tool.poetry]
name = "pw"
version = "0.1.0"
description = "Playwright autotest subsystem"
authors = ["AQA"]
packages = [
    { include = "utils" },
]

[tool.poetry.dependencies]
python = "^3.12"
pytest-playwright = "^0.4.3"
pytest-asyncio = "^0.21.1"
allure-pytest = "^2.13.2"
playwright = "^1.40.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
